--- a/html_css/style.css
+++ b/html_css/style.css
@@ -75,12 +75,23 @@ main {
     border-radius: 10px;
 }
 
+.mensagens {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    width: 100%;
+    height: 50px;
+    background-color: aliceblue;
+    border-radius: 10px;
+}
 
 .gols {
     display: flex;
     justify-content: center;
 
+    margin-top: 5px;
+    margin-bottom: 5px;
     border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
